fixing image alignment in watercolor post

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,7 +6,7 @@
 
 .cent {
 	display: inline;
-	float: none;
+	float: center;
 }
 
 
